[gd_scene load_steps=20 format=3 uid="uid://lcaemrer8lsd"]

[ext_resource type="Script" path="res://enemies/bill_gates.gd" id="1_al510"]
[ext_resource type="Texture2D" uid="uid://bs3a21ckhywul" path="res://artAssets/shadow16px.png" id="2_8uf3c"]
[ext_resource type="PackedScene" uid="uid://dje4qcioqnd1w" path="res://enemies/enemy_portal.tscn" id="2_tr4e3"]
[ext_resource type="Texture2D" uid="uid://nnsroercxxnt" path="res://artAssets/enemies/billGates-Sheet.png" id="3_3vkpu"]
[ext_resource type="Texture2D" uid="uid://b43bk6rwolk68" path="res://artAssets/enemies/billGatesHit-Sheet.png" id="4_1vc0m"]
[ext_resource type="Texture2D" uid="uid://d0548ftyehnkr" path="res://artAssets/uiElements/enemyHp.png" id="4_cviai"]
[ext_resource type="Texture2D" uid="uid://dnb72eru1286q" path="res://artAssets/effects/bigExplosion-Sheet.png" id="6_0jjhv"]

[sub_resource type="Animation" id="Animation_cftla"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitSplat:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hpbar:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-5, -45)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("stompEffect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("stompEffect:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("enemySprite:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_hjixu"]
resource_name = "crouch"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 14, 13, 12, 11, 10]
}

[sub_resource type="Animation" id="Animation_3frsq"]
resource_name = "jump"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.85, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 13, 14, 10, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.5, 3, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -80), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hpbar:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.5, 3, 1),
"update": 0,
"values": [Vector2(-5, -45), Vector2(-5, -125), Vector2(-5, -45)]
}

[sub_resource type="Animation" id="Animation_k2s84"]
resource_name = "spawn"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(12, 1),
"update": 0,
"values": [Vector2(0, -256), Vector2(0, -24)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hpbar:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(15, 1),
"update": 0,
"values": [Vector2(-5, -274), Vector2(-5, -45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 2.1, 2.2, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 10, 11, 12, 13, 14]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(5, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8od6d"]
resource_name = "stomp"
length = 1.6
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("stompEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.55),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("stompEffect:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.6, 0.95, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 17, 21]
}

[sub_resource type="Animation" id="Animation_s7xul"]
resource_name = "takeHit"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_t23vx"]
resource_name = "walk"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hitSplat:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_ehqm3"]
resource_name = "evilEyes"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 32, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ob42"]
_data = {
"RESET": SubResource("Animation_cftla"),
"crouch": SubResource("Animation_hjixu"),
"evilEyes": SubResource("Animation_ehqm3"),
"jump": SubResource("Animation_3frsq"),
"spawn": SubResource("Animation_k2s84"),
"stomp": SubResource("Animation_8od6d"),
"takeHit": SubResource("Animation_s7xul"),
"walk": SubResource("Animation_t23vx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kk21p"]
size = Vector2(9, 19.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8p745"]
radius = 20.0
height = 72.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vk77i"]

[node name="bill" type="CharacterBody2D" groups=["enemies", "portal_spawn"]]
collision_mask = 0
script = ExtResource("1_al510")
hitpoints = 200
portalScene = ExtResource("2_tr4e3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("2_8uf3c")

[node name="enemySprite" type="Sprite2D" parent="."]
texture = ExtResource("3_3vkpu")
offset = Vector2(0, -24)
hframes = 33
region_rect = Rect2(16, 208, 16, 16)

[node name="hitSplat" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_1vc0m")
offset = Vector2(0, -24)
hframes = 10
region_rect = Rect2(16, 208, 16, 16)

[node name="hitpoint" type="Marker2D" parent="."]
position = Vector2(0, -19)

[node name="slowTimer" type="Timer" parent="."]
one_shot = true

[node name="hpbar" type="TextureProgressBar" parent="."]
offset_left = -5.0
offset_top = -45.0
offset_right = 5.0
offset_bottom = -43.0
value = 100.0
texture_progress = ExtResource("4_cviai")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ob42")
}
autoplay = "spawn"

[node name="hitTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="hitTimerCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_kk21p")

[node name="stompEffect" type="Sprite2D" parent="."]
visible = false
z_index = 200
position = Vector2(0, -8)
texture = ExtResource("6_0jjhv")
hframes = 11

[node name="attackTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="attackRadius" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRadius"]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8p745")

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="jumpDetector" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumpDetector"]
shape = SubResource("CircleShape2D_vk77i")

[connection signal="timeout" from="slowTimer" to="." method="_on_slow_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="hitTimer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="attackRadius" to="." method="_on_attack_radius_area_entered"]
[connection signal="area_exited" from="attackRadius" to="." method="_on_attack_radius_area_exited"]
[connection signal="area_entered" from="jumpDetector" to="." method="_on_jump_detector_area_entered"]
